Fixing issue where select zoomed page on iOS

--- a/app/assets/stylesheets/module-form.css.scss
+++ b/app/assets/stylesheets/module-form.css.scss
@@ -23,3 +23,8 @@
   font-size: 1.4em;
   list-style: square;
 }
+
+//http://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone
+select {
+    font-size: 16px !important;
+}
